This commit adds a slot in the editor content area for the block styles popover. We're also reverting changes from the previous commit, where we removed the overflow scroll on the sidebar. In order to position the preview correctly we need to keep an eye on the scroll top value of the content area.

--- a/packages/block-editor/src/components/block-styles/style.scss
+++ b/packages/block-editor/src/components/block-styles/style.scss
@@ -1,15 +1,27 @@
-.block-editor-block-styles {
+// Do not show in narrow widths. Needs specificity.
+.block-editor-block-styles__preview-panel {
+	display: none;
+	position: absolute;
+	right: $grid-unit-20;
+	top: $grid-unit-20;
+	border: $border-width solid $gray-300;
+	border-radius: $radius-block-ui;
+	background: $white;
+	width: 300px;
+	left: auto;
+	overflow: hidden;
+	z-index: 10;
 
-	// Fixing the position is specific to the block inspector context.
-	&.block-inspector__block-styles .block-editor-inserter__preview-container {
-		position: fixed;
-		right: $sidebar-width + $grid-unit-40;
-		top: $header-height + $grid-unit-40 + $admin-bar-height; // $admin-bar-height;
-		left: auto;
+	@include break-medium() {
+		display: block;
 	}
 
-	&.is-fullscreen-active.block-inspector__block-styles .block-editor-inserter__preview-container {
-		top: $header-height + $grid-unit-40;
+	// Overrides for InserterPreviewPanel.
+	.block-editor-inserter__preview-container {
+		left: auto;
+		right: auto;
+		top: auto;
+		position: static;
 	}
 
 	.block-editor-block-card__title.block-editor-block-card__title {
@@ -24,14 +36,13 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
-	margin-bottom: $grid-unit-05;
+	gap: $grid-unit-10;
 
 	.block-editor-block-styles__item {
 		color: $gray-800;
 		box-shadow: inset 0 0 0 1px $gray-400;
 		display: inline-block;
 		width: calc(50% - #{$grid-unit-05});
-		margin-bottom: $grid-unit-10;
 
 		&:focus,
 		&:hover {
