--- a/packages/interface/src/components/interface-skeleton/style.scss
+++ b/packages/interface/src/components/interface-skeleton/style.scss
@@ -113,6 +113,8 @@ html.interface-interface-skeleton__html-container {
 }
 
 .interface-interface-skeleton__sidebar {
+	overflow: auto;
+
 	@include break-medium() {
 		border-left: $border-width solid $gray-200;
 	}
